// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/Skills/SkillsSidebar should render loading indicator component when cards are not available 1`] = `
<SidebarContent
  className="bcs-skills"
  sidebarView="skills"
  title={
    <FormattedMessage
      defaultMessage="Skills"
      id="be.sidebarSkillsTitle"
    />
  }
>
  <LoadingIndicator />
</SidebarContent>
`;

exports[`elements/content-sidebar/Skills/SkillsSidebar should render skills sidebar component when cards are available 1`] = `
<SidebarContent
  className="bcs-skills"
  sidebarView="skills"
  title={
    <FormattedMessage
      defaultMessage="Skills"
      id="be.sidebarSkillsTitle"
    />
  }
>
  <SidebarSkills
    cards={[]}
    errors={{}}
    file={{}}
    onSkillChange={[Function]}
  />
</SidebarContent>
`;
